29 - getting the ontology paths while harvesting
Co-authored-by: Rony <rony.cesana@thoughtworks.com>